Try different declaration of height

--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Create Spotify playlists with ease. Manually fine-tune your creation or let AI do the work for you.">
+        content="Create Spotify playlists with ease.">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.juiceellish.dev">
@@ -36,7 +36,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
  
-<body class="h-100">
+<body style="height: 100vh;">
     <!-- STYLE LIKE NEUMORPHISM OFFCANVAS AND ARROW -->
     <nav class="bg-dark navbar navbar-dark d-flex">
         <div class="container-fluid d-flex" id="logo_div">
