--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -36,7 +36,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
  
-<body style="height: 100vh;">
+<body>
     <!-- STYLE LIKE NEUMORPHISM OFFCANVAS AND ARROW -->
     <nav class="bg-dark navbar navbar-dark d-flex">
         <div class="container-fluid d-flex" id="logo_div">
