--- a/web-apps/static/playlister/styles.css
+++ b/web-apps/static/playlister/styles.css
@@ -131,6 +131,25 @@ hr {
     /* color: var(--bg-color); */
     outline: none;
 }
+.dropdown-toggle {
+    background-color: transparent;
+    border: transparent;
+    letter-spacing: 1px;
+    margin: 1rem;
+    outline: transparent;
+}
+.dropdown-menu {
+    background-color: transparent;
+    border: 1px solid var(--logo-blue);
+    color: var(--text-color);
+}
+.dropdown-item {
+    color: var(--text-color);
+}
+.dropdown-item:hover {
+    background-color: var(--logo-blue);
+    color: var(--bg-color);
+}
 
 /* MOBILE DEFAULTS GO BELOW, EVERYTHING ELSE GOES OUTSIDE OF IT */
 @media screen and (min-width: 768px) {
