--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -44,14 +44,16 @@
                 <img id="logo" src="{{ url_for('static', filename='playlister/images/playlister_word.svg') }}" alt="Playlister Logo">
                 <img id="beta" src="{{ url_for('static', filename='playlister/images/beta.svg') }}" alt="Beta Logo">
             </a>
-            <div class="dropdown">
-                <a aria-expanded="false" class="d-flex dropdown-toggle flex-row align-items-center text-color" data-bs-toggle="dropdown" href="#" role="button" type="button">
-                    <img id="pfp" src="{{ sm_image }}" alt="{{ username }} Profile Picture" class="d-inline-block my-auto">{{ username }}
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end text-center">
-                    <li><a class="btn btn-outline-info dropdown-item" href="{{ url_for('sign_out') }}">Sign out</a></li>
-                </ul>
-            </div>
+            {% if sm_image and username %}
+                <div class="dropdown">
+                    <a aria-expanded="false" class="d-flex dropdown-toggle flex-row align-items-center text-color" data-bs-toggle="dropdown" href="#" role="button" type="button">
+                        <img id="pfp" src="{{ sm_image }}" alt="{{ username }} Profile Picture" class="d-inline-block my-auto" height="64" width="64">{{ username }}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end text-center">
+                        <li><a class="btn btn-outline-info dropdown-item" href="{{ url_for('sign_out') }}">Sign out</a></li>
+                    </ul>
+                </div>
+            {% endif %}
         </div>
     </nav>
 
