Prep playlister/styles.css for mobile design

--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -38,7 +38,7 @@
  
 <body>
     <!-- STYLE LIKE NEUMORPHISM OFFCANVAS AND ARROW -->
-    <nav class="bg-dark navbar navbar-dark d-flex">
+    <nav class="bg-dark navbar navbar-dark d-flex mb-5">
         <div class="container-fluid d-flex" id="logo_div">
             <a href="/playlister/index" class="navbar-brand">
                 <img id="logo" src="{{ url_for('static', filename='playlister/images/playlister_word.svg') }}" alt="Playlister Logo">
