--- a/web-apps/templates/playlister/search.html
+++ b/web-apps/templates/playlister/search.html
@@ -9,11 +9,11 @@
         <div class="container-fluid d-flex flex-column align-items-center">
             <form action="/playlister/search:{{ id }}" class="d-inline-flex flex-column justify-content-center align-items-center w-100" method="POST">
                 {% if has_image == False %}
-                    <img class="mb-5" src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Cover Image" height="400" width="400">
+                    <img id="playlist_cover" class="mb-5" src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Cover Image">
                 {% else %}
-                    <img class="mb-5" src="{{ image }}" alt="Cover Image: {{ name }}" height="400" width="400">
+                    <img id="playlist_cover" class="mb-5" src="{{ image }}" alt="Cover Image: {{ name }}">
                 {% endif %}
-                <div class="accordion w-25 mb-3" id="mainAccordion">
+                <div class="accordion mb-3" id="mainAccordion">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button aria-controls="collapseOne" aria-expanded="false" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne" type="button">
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-inline-flex flex-column justify-content-center align-items-center mb-3 w-50">
+                <div class="d-inline-flex flex-column justify-content-center align-items-center mb-3 search-btn">
                     <div class="input-group m-3">
                         <span class="input-group-text material-symbols-outlined" id="basic-addon1">search</span>
                         <input aria-describedby="basic-addon2" aria-label="Search" autocomplete="off" autofocus class="form-control" name="search_bar" type="text">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 {% if not sorted_albums %}
-                    <div class="d-flex justify-content-center w-25"></div>
+                    <div class="d-flex justify-content-center"></div>
                 {% else %}
                     <div class="accordion mb-3" id="accordionParent">
                         {% for album in sorted_albums %}
