--- a/web-apps/templates/playlister/playlist.html
+++ b/web-apps/templates/playlister/playlist.html
@@ -59,12 +59,12 @@
                 <div class="w-100">
                     <hr class="my-hr">
                 </div>
-                <div class="d-flex justify-content-center pb-2">
+                <div class="d-flex justify-content-center">
                     <a class="btn btn-light add-to-playlist" href="{{ url_for('playlister_search', id=id) }}">Add to this playlist</a>
                 </div>
             {% else %}
                 {% if owner == username %}
-                    <div class="d-flex justify-content-center pb-2">
+                    <div class="d-flex justify-content-center">
                         <a class="btn btn-light add-to-playlist" href="{{ url_for('playlister_search', id=id) }}">Add to this playlist</a>
                     </div>
                 {% endif %}
