Fixed margin/padding on add buttons

--- a/web-apps/static/playlister/styles.css
+++ b/web-apps/static/playlister/styles.css
@@ -132,7 +132,9 @@ hr {
 .add-btn {
     background-color: transparent;
     border: none;
+    margin: 0;
     outline: none;
+    padding: 0;
 }
 .add-btn:active {
     opacity: .5;
