--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -70,7 +70,9 @@
     <main class="container-fluid text-center">
         {% block main %}{% endblock %}
     </main>
-    <hr class="my-hr">
+    <div class="w-100">
+        <hr class="my-hr mx-4">
+    </div>
     <footer class="my-4 small text-center">
         2024 &copy; juiceellish
     </footer>
