Add close buttons to flash messages

--- a/web-apps/templates/playlister/search.html
+++ b/web-apps/templates/playlister/search.html
@@ -43,7 +43,7 @@
                 <div class="d-inline-flex flex-column justify-content-center align-items-center mb-3 search-btn">
                     <div class="input-group m-3">
                         <span class="input-group-text material-symbols-outlined" id="basic-addon1">search</span>
-                        <input aria-describedby="basic-addon2" aria-label="Search" autocomplete="off" autofocus class="form-control" name="search_bar" type="text">
+                        <input aria-describedby="basic-addon2" aria-label="Search" autocomplete="off" class="form-control" name="search_bar" type="text">
                         <button class="btn btn-outline-info" id="button-addon2" type="submit">Search</button>
                     </div>
                 </div>
