--- a/web-apps/static/playlister/styles.css
+++ b/web-apps/static/playlister/styles.css
@@ -176,6 +176,9 @@ hr {
     opacity: .5;
     transform: scale(.9);
 }
+.bi-x:active {
+    transform: scale(.8);
+}
 
 /* Styles for non-mobile devices */
 @media screen and (min-width: 768px) {
