--- a/web-apps/static/playlister/styles.css
+++ b/web-apps/static/playlister/styles.css
@@ -179,6 +179,9 @@ hr {
 .bi-x:active {
     transform: scale(.8);
 }
+.bi-x:hover {
+    cursor: pointer;
+}
 
 /* Styles for non-mobile devices */
 @media screen and (min-width: 768px) {
