--- a/web-apps/templates/layout.html
+++ b/web-apps/templates/layout.html
@@ -24,6 +24,8 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <!-- Custom canvas JS -->
+    <script src="{{ url_for('static', filename='canvas.js') }}"></script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/4390.png') }}">
