--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -77,7 +77,7 @@
         <hr class="my-hr mx-4">
     </div>
     <footer class="my-4 small text-center">
-        2024 &copy; juiceellish
+        Powered by <a href="https://open.spotify.com/" target="_blank"><img height="35" src="{{ url_for('static', filename='playlister/images/Spotify_Logo.png') }}" alt="Spotify Logo"></a>
     </footer>
 </body>
 
