--- a/web-apps/templates/playlister/index.html
+++ b/web-apps/templates/playlister/index.html
@@ -12,34 +12,30 @@
     </section>
     <hr class="my-hr my-4">
     <section>
-        <div class="row row-cols-xxl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-            {% for playlist in playlists['items'] %}
-            <div class="col">
-                <div class="card h-100 bg-transparent" id="card">
-                    <a href="{{ url_for('playlister_playlist', playlist=playlist['name'], id=playlist['id']) }}">
-                        {% if not playlist['images'] %}
-                            <img src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Playlist Cover Image" height="300" width="300">
-                        {% else %}
-                            <img src="{{ playlist['images'][0]['url'] }}" alt="Cover Image: {{ playlist['name'] }}" height="300" width="300">
-                        {% endif %}
-                    </a>
-                    <!-- SIZE DEPENDS ON DEVICE; DESIGN FOR MOBILE -->
-                    <div class="card-body mb-5">
-                        <h5 class="card-title">{{ playlist['name'] }}</h5>
+        {% if not playlists %}
+            <div class="row row-cols-xxl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+                No playlists yet
+            </div>
+        {% else %}
+            <div class="row row-cols-xxl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+                {% for playlist in playlists['items'] %}
+                <div class="col">
+                    <div class="card h-100 bg-transparent" id="card">
+                        <a href="{{ url_for('playlister_playlist', playlist=playlist['name'], id=playlist['id']) }}">
+                            {% if not playlist['images'] %}
+                                <img src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Playlist Cover Image" height="300" width="300">
+                            {% else %}
+                                <img src="{{ playlist['images'][0]['url'] }}" alt="Cover Image: {{ playlist['name'] }}" height="300" width="300">
+                            {% endif %}
+                        </a>
+                        <!-- SIZE DEPENDS ON DEVICE; DESIGN FOR MOBILE -->
+                        <div class="card-body mb-5">
+                            <h5 class="card-title">{{ playlist['name'] }}</h5>
+                        </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
-        </div>
+        {% endif %}
     </section>
-    <!-- Page refresh script -->
-    <!-- <script>
-        function reloadIt() {
-            if (window.location.href.substr(-2) !== "?r") {
-                window.location = window.location.href + "?r";
-            }
-        }
-
-        setTimeout('reloadIt()', 100);
-    </script> -->
 {% endblock %}
