Temporary styling for portfolio

--- a/web-apps/templates/layout.html
+++ b/web-apps/templates/layout.html
@@ -34,7 +34,15 @@
 </head>
 
 <body>
-    {% block main %}{% endblock %}
+
+    <main class="container-fluid text-center">
+        {% block main %}{% endblock %}
+    </main>
+
+    <footer>
+
+    </footer>
+    
 </body>
 
 </html>
