--- a/web-apps/static/playlister/loading-screen.css
+++ b/web-apps/static/playlister/loading-screen.css
@@ -1,16 +1,28 @@
+/* Adobe fonts -> 'Cubano' & 'Bryant Web' */
 @import url("https://use.typekit.net/nbg5qht.css");
+/* Google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Oswald:wght@100;200;300;400;500;600;700&display=swap');
+
+/* HTML for it */
+/* <div class="container-fluid">
+    <div class="container">
+        <img src="{{ url_for('static', filename='images/4390.png') }}" alt="Deathbat #4390" height="200" width="200">
+        <p>Loading<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></p>
+        <a href="{{ url_for('playlister_index') }}">Playlister</a>
+    </div>
+</div> */
 
 * {
     margin: 0;
     padding: 0;
 }
 body {
-    font-family: 'cubano', sans-serif;
+    background-color: black;
+    color: #F8F9FA;
+    font-family: 'Josefin Sans', sans-serif;
     height: 100%;
-    background-color: #1d1d1f;
-    color: #f5f5f7;
+    letter-spacing: 0.03rem;
 }
-
 p {
     line-height: 1.5rem;
 }
