--- a/web-apps/static/styles.css
+++ b/web-apps/static/styles.css
@@ -58,8 +58,7 @@ a {
     width: fit-content;
     z-index: 0;
 }
-.my-btn:hover,
-.my-btn:active {
+.my-btn:hover {
     color: var(--bg-color);
 }
 .my-btn.hover::after {
@@ -75,7 +74,6 @@ a {
     z-index: -1;
 }
 .my-btn.hover:hover::after,
-.my-btn.hover:focus::after,
-.my-btn.hover:active::after {
+.my-btn.hover:focus::after {
     height: 100%;
 }
